--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "debounce": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.1",
+    "moment": "^2.22.2",
     "simple-vue-validator": "^0.14.0",
     "svg-fill-loader": "0.0.8",
     "vue": "^2.4.4",
@@ -19,16 +20,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-1": "^6.24.1",
     "bootstrap": "^4.0.0-beta",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "jquery": "^3.2.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "popper.js": "^1.12.5",
     "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.4",
